--- a/index.html
+++ b/index.html
@@ -3,9 +3,65 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Leader Board</title>
+  <!-- stylesheet  -->
+  <link rel="stylesheet" href="style.css">
+  <!-- google font poppins  -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+  href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+  rel="stylesheet">
 </head>
 <body>
-  
+  <!-- header start -->
+  <header> 
+
+  </header>
+  <!-- header end -->
+
+  <main>
+    <!-- top-players start -->
+    <section class="container">
+      <div class="top-players">  
+        <h2 class="section-title">Top players </h2>
+        <div class="players"> 
+          <div class="player">
+            <img src="image/players/player-1.png" alt="">
+            <h3 class="player-name">Top player-1</h3>
+          </div>
+          <div class="player">
+            <img src="image/players/player-2.png" alt="">
+            <h3 class="player-name">Top player-2</h3>
+          </div>
+          <div class="player">
+            <img src="image/players/player-3.png" alt="">
+            <h3 class="player-name">Top player-3</h3>
+          </div>
+          <div class="player">
+            <img src="image/players/player-4.png" alt="">
+            <h3 class="player-name">Top player-4</h3>
+          </div>
+          <div class="player">
+            <img src="image/players/player-5.png" alt="">
+            <h3 class="player-name">Top player-5</h3>
+          </div>
+          <div class="player">
+            <img src="image/players/player-6.png" alt="">
+            <h3 class="player-name">Top player-6</h3>
+          </div>
+        </div>
+      </div>
+      <hr>
+    </section>
+    <!-- top-players end -->
+    <!-- top blog start -->
+    <section class="top-blog"> 
+
+    </section>
+    <!-- top-blog end -->
+  </main>
 </body>
 </html>
