--- a/index.html
+++ b/index.html
@@ -55,6 +55,49 @@
         </div>
       </div>
       <hr>
+      <!-- top blog start  -->
+      <div class="top-blogs"> 
+        <h2 class="section-title">Top Blog</h2>
+        <div class="blogs">
+          <article class="blog">
+            <div class="blog-img">
+              <img src="image/blogs/blog-1.png" alt="">
+            </div>     
+            <div class="blog-info"> 
+              <h2>13 of My Favorite UI/UX Goodies</h2>
+              <h4>By <span>Danny Sapio</span></h4>
+            </div>
+          </article>
+          <article class="blog">
+            <div class="blog-img">
+              <img src="image/blogs/blog-2.png" alt="">
+            </div>
+            <div class="blog-info"> 
+              <h2>13 of My Favorite UI/UX Goodies</h2>
+              <h4>By <span>Danny Sapio</span></h4>
+            </div>
+          </article>
+          <article class="blog">
+            <div class="blog-img">
+              <img src="image/blogs/blog-3.png" alt="">
+            </div>
+            <div class="blog-info"> 
+              <h2>13 of My Favorite UI/UX Goodies</h2>
+              <h4>By <span>Danny Sapio</span></h4>
+            </div>
+          </article>
+          <article class="blog">
+            <div class="blog-img">
+              <img src="image/blogs/blog-4.png" alt="">
+            </div>
+            <div class="blog-info"> 
+              <h2>13 of My Favorite UI/UX Goodies</h2>
+              <h4>By <span>Danny Sapio</span></h4>
+            </div>
+          </article>
+        </div>
+      </div>
+      <!-- top blog end -->
     </section>
     <!-- top-players end -->
     <!-- top blog start -->
