latest course add

--- a/index.html
+++ b/index.html
@@ -99,12 +99,55 @@
       </div>
       <!-- top blog end -->
     </section>
-    <!-- top-players end -->
-    <!-- top blog start -->
-    <section class="top-blog"> 
-
+    <!-- last course start -->
+    <section class="container"> 
+      <h2 class="section-title">latest Course</h2>
+      <div class="last-courses"> 
+        <div class="course"> 
+          <img class="course-img" src="image/courses/course-1.png" alt="">
+          <h2 class="course-title">React - The Complete Guide 2020</h2>
+          <h5>Reed Krakoff</h5>
+          <div class="rating"> 
+            <div class="star"> 
+              <img src="image/icons/star.png" alt="">
+              <img src="image/icons/star.png" alt="">
+              <img src="image/icons/star.png" alt="">
+            </div>
+            <div class="total-star">45</div>
+            <div class="time"><img src="image/icons/clock.png" alt="">01:30hr</div>
+          </div>
+        </div>
+        <div class="course"> 
+          <img class="course-img"  src="image/courses/course-1.png" alt="">
+          <h2 class="course-title">React - The Complete Guide 2020</h2>
+          <h5>Reed Krakoff</h5>
+          <div class="rating"> 
+            <div class="star"> 
+              <img src="image/icons/star.png" alt="">
+              <img src="image/icons/star.png" alt="">
+              <img src="image/icons/star.png" alt="">
+            </div>
+            <div class="total-star">45</div>
+            <div class="time"><img src="image/icons/clock.png" alt="">01:30hr</div>
+          </div>
+        </div>
+        <div class="course"> 
+          <img class="course-img"  src="image/courses/course-1.png" alt="">
+          <h2 class="course-title">React - The Complete Guide 2020</h2>
+          <h5>Reed Krakoff</h5>
+          <div class="rating"> 
+            <div class="star"> 
+              <img src="image/icons/star.png" alt="">
+              <img src="image/icons/star.png" alt="">
+              <img src="image/icons/star.png" alt="">
+            </div>
+            <div class="total-star">45</div>
+            <div class="time"><img src="image/icons/clock.png" alt="">01:30hr</div>
+          </div>
+        </div>
+      </div>
     </section>
-    <!-- top-blog end -->
+    <!--last course end -->
   </main>
 </body>
 </html>
